<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Style_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Material"
    tools:context=".LogInFragment">


    <ImageView
        android:id="@+id/logo_apple"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_applelogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/for_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/_40sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logo_apple"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/logo_apple"
        app:layout_constraintTop_toBottomOf="@+id/logo_apple" />

    <TextView
        android:id="@+id/welcome_text_D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Welcome back \n Sign in to Continue etiam  "
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="@+id/for_text"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/for_text"
        app:layout_constraintTop_toBottomOf="@+id/for_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="52dp"
        android:hint="@string/email"
        app:counterEnabled="true"
        app:counterMaxLength="35"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_D"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:hint="@string/password"
        app:counterEnabled="true"
        app:counterMaxLength="35"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input_Email"
        app:layout_constraintTop_toBottomOf="@+id/input_Email"

        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="420dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/forget_password"
        android:textColor="@color/blue"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />


    <Button
        android:id="@+id/GoSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="136dp"
        android:background="@drawable/shape_btn"
        android:inputType="text"
        android:text="@string/sign_in"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoSignIn">

        <TextView
            android:id="@+id/dontHav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:textSize="@dimen/_10ssp"
         />

        <TextView
            android:id="@+id/create_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="Create Account "
            android:textColor="@color/blue"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>