<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">


    <ImageView
        android:id="@+id/logo_apple_s"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:src="@drawable/ic_applelogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_text_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Create Account"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logo_apple_s"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/logo_apple_s"
        app:layout_constraintTop_toBottomOf="@+id/logo_apple_s" />

    <TextView
        android:id="@+id/welcome_text_S"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Register by entering your name, \n email, and password, \n and agreeing to the terms "
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/login_text_s"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/login_text_s"
        app:layout_constraintTop_toBottomOf="@+id/login_text_s" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:hint="@string/name"
        app:counterEnabled="true"
        app:counterMaxLength="35"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_S">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_Email_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:hint="@string/email"
        app:counterEnabled="true"
        app:counterMaxLength="35"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/input_name"
        app:layout_constraintStart_toStartOf="@+id/input_name"
        app:layout_constraintTop_toBottomOf="@+id/input_name">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password_S"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:hint="@string/password"
        app:counterEnabled="true"
        app:counterMaxLength="35"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input_Email_s"
        app:layout_constraintTop_toBottomOf="@+id/input_Email_s"

        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="420dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password_S">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/textView"
            android:layout_width="29dp"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password_S" />

        <TextView
            android:id="@+id/agre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I Agree With Our " />

        <TextView
            android:id="@+id/tearms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@color/blue"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="and"

            />

        <TextView
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/conditions"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </LinearLayout>


    <Button
        android:id="@+id/CreatAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:background="@drawable/shape_btn"
        android:inputType="text"
        android:text="@string/create_account"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password_S" />


    <TextView
        android:id="@+id/dontHav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20sp"
        android:text="Already I have an account "
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreatAcc" />

    <TextView
        android:id="@+id/Signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:text=" SignIn"
        android:textColor="@color/blue"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/dontHav"
        app:layout_constraintStart_toEndOf="@+id/dontHav"
        app:layout_constraintTop_toTopOf="@+id/dontHav" />

</androidx.constraintlayout.widget.ConstraintLayout>